Safari365 Prod/src/objects/ServiceLineItem__c.object
<CustomObject>
    <fields>
        <fullName>Basis__c</fullName>
        <label>Basis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Checkin_Time__c</fullName>
        <label>Checkin Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientNotes__c</fullName>
        <label>Client Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Crm_Code__c</fullName>
        <label>T&amp;C&apos;s</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_Order__c</fullName>
        <label>Day Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Details_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field confirms all required details to/from the supplier have been imputed.</description>
        <label>Details Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Override_NetCost__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you have manually entered Nett service costs and do not want them overwritten by the database 2</description>
        <inlineHelpText>Check this box if you have manually entered Nett service costs and do not want them overwritten by the database</inlineHelpText>
        <label>Do Not Override NetCost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailForConfirmedStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EmailForConfirmedStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailForProvisionallyBooked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EmailForProvisionallyBooked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailForRequestConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EmailForRequestConfirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailForRequestProvisionalBooking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EmailForRequestProvisionalBooking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Terminal__c</fullName>
        <label>End Terminal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_COS_in_USD__c</fullName>
        <label>Insurance COS in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_COS_in_ZAR__c</fullName>
        <label>Insurance COS in ZAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Sale_in_USD__c</fullName>
        <label>Insurance  Sale in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Sale_in_ZAR__c</fullName>
        <label>Insurance  Sale in ZAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Quotation_Extra_Costing_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Quotation Extra Costing Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarkUp_Zar__c</fullName>
        <formula>((Total__c - Nett_Cost__c) / Nett_Cost__c)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarkUp in Zar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarkupUSD__c</fullName>
        <formula>((Sale_in_USD__c- Nett_Cost_in_USD__c )/ Nett_Cost_in_USD__c)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Markup in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Markup_Eur__c</fullName>
        <formula>((Sale_in_Eur__c - Nett_Cost_in_EUR__c )/Nett_Cost_in_EUR__c)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarkupEur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Markup__c</fullName>
        <label>MarkUp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <description>Wetu Routes</description>
        <label>Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nett_Cost__c</fullName>
        <label>Nett Cost in Zar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nett_Cost_in_EUR__c</fullName>
        <label>Nett Cost in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nett_Cost_in_USD__c</fullName>
        <label>Nett Cost in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfDays__c</fullName>
        <label>NumberOfDays</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <formula>CASESAFEID(QuotationLine__r.Quotation__r.Opportunity__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpportunityId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <label>Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Override_details__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Reference__c</fullName>
        <label>Parent Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photobooks_COS_in_USD__c</fullName>
        <label>Photobooks COS in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Photobooks_COS_in_ZAR__c</fullName>
        <label>Photobooks COS in ZAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Photobooks_Sale_in_USD__c</fullName>
        <label>Photobooks Sale in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Photobooks_Sale_in_ZAR__c</fullName>
        <label>Photobooks Sale in ZAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provisional_Booking_Expiry_Date__c</fullName>
        <label>Provisional Booking Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuotationLine__c</fullName>
        <label>Quotation Line</label>
        <referenceTo>QuotationLineItem__c</referenceTo>
        <relationshipName>ServiceLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reservation_Number__c</fullName>
        <label>Reservation Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Configuration__c</fullName>
        <label>Room Configuration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_in_Eur__c</fullName>
        <label>Sale in Eur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sale_in_USD__c</fullName>
        <label>Sale in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected_OPT_Code__c</fullName>
        <label>Selected OPT Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Supplier_Id__c</fullName>
        <label>Selected Supplier Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceLocation__c</fullName>
        <label>ServiceLocation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Date__c</fullName>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Detail__c</fullName>
        <label>Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Duration__c</fullName>
        <label>Service Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Line_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Supplier_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Terminal__c</fullName>
        <label>Start Terminal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierName__c</fullName>
        <label>SupplierName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Code__c</fullName>
        <label>Supplier Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Notes__c</fullName>
        <label>Supplier Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ticket_Class__c</fullName>
        <label>Ticket Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalServiceDuration__c</fullName>
        <label>TotalServiceDuration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Sale in Zar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WeekDays__c</fullName>
        <label>Day of the week</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wetu_End_Location_Id__c</fullName>
        <label>Wetu End Location Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wetu_End_Location__c</fullName>
        <label>End Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wetu_End_Time__c</fullName>
        <label>End Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wetu_Start_Location_Id__c</fullName>
        <label>Wetu Start Location Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wetu_Start_Location__c</fullName>
        <label>Start Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wetu_Start_time__c</fullName>
        <label>Start time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <label>Service Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Supplier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ServiceLine Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Status_Confirmed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Service_Status__c),
ISPICKVAL(Service_Status__c,&quot;Confirmed&quot;),ISBLANK( Reservation_Number__c) )</errorConditionFormula>
        <errorMessage>Please provide the Reservation Number</errorMessage>
    </validationRules>
</CustomObject>